hphp/test/zend/bad/ext-intl/calendar_getNow_error.php
<?php
ini_set("intl.error_level", E_WARNING);

var_dump(intlcal_get_now(1));
var_dump(IntlCalendar::getNow(2));
